2008-06-16  Johnny Jacob  <jjohnny@novell.com>
	
	* src/Backends/EDS/EDSBackends.cs: Listen on Source List for
	new groups and sources. Added debug statements.
	
2008-06-12  Ankit Jain  <radical@gmail.com>

	* src/TaskTreeView.cs (PulseAnimation): Disable this when the window is
	gone.  Fixes bug #538144.

2008-06-11  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Removed seemingly unused $enable_ice_desktop variable. 
	  Make sure to check that Novell.IceDesktop is actually available
	  when running configure.  Fixes bug #537906.
	* NEWS: Getting ready for 0.1.6 release.

2008-06-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskTreeView.cs: Prevent crash when double-clicking date widget. 
	  Fixes bug #525282.

2008-06-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/Makefile.am: Update GTK+ icon cache on uninstall.  Fixes
	  bug #536740, patch courtesy of Andrew Starr-Bochicchio.

2008-05-19  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: De-sensitize categoryComboBox during task window
	  load.  Fixes bug #532764, patch courtesy of Steve Brown.

2008-05-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* RtmNet/Rtm.cs: Prevent crash when requests timeout during network
	  failure.  Fixes bug #533609, patch courtesy of Charles Schaefer.

2008-05-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Backends/Rtm/RtmBackend.cs: Checking if the refresh Thread is
	  still alive and, if it isn't, create a new Thread to be used. 
	  Prevents crash when switching away from and then back to RTM
	  backend.  Fixes bug #533607, patch courtesy of Charles Schaefer.

2008-05-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Rename QuitMainLoop to Quit, have it call the
	  OnQuit handler used in the StatusIcon menu.
	* src/TaskWindow.cs: Bind ctrl+q to Application.Quit.

2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
